<resources>
    <string name="app_name">Case Manager Frontend Android</string>
    <string name="title_hint">Task title</string>
    <string name="description_hint">Task description</string>
    <string name="status_hint">Task status</string>
    <string name="created_date_hint">Task created date</string>
    <string name="due_date_hint">Task due date</string>
    <string name="created_date_label">Created:</string>
    <string name="due_date_label">Due:</string>
    <string name="update_task_header">Update Status or Delete Task</string>
    <string name="update_task_button">Update Status</string>
    <string name="delete_task_button">Delete Task</string>
    <string name="create_task_header">Create New Task</string>
    <string name="create_task_button">Create</string>
    <string name="tasks_header">Tasks</string>
    <string name="status_label">Enter new status below. Valid statuses are: Not yet started, In progress, Complete</string>
    <string name="edit_due_date_hint">"Due date, in format YYYY-MM-DDTHH:MM:SS. e.g. 2025-01-01T01:01:01"</string>
    <string name="edit_created_date_hint">Created date, in format YYYY-MM-DDTHH:MM:SS. e.g. 2025-01-01T01:01:01</string>
    <string name="edit_status_hint">Task status. Valid statuses are: Not yet started, In progress, Complete</string>
</resources>