<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.dts.casemanagerfrontendandroid.model.Task"
            />
        <variable
            name="clickHandler"
            type="com.dts.casemanagerfrontendandroid.ui.createtask.CreateTaskClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.createtask.CreateTaskActivity">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/dark_blue"
            android:text="@string/create_task_header"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            />

        <EditText
            android:id="@+id/editTitle"
            android:text="@={task.title}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/title_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/editDescription"
            />

        <EditText
            android:id="@+id/editDescription"
            android:text="@={task.description}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/description_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTitle"
            app:layout_constraintBottom_toTopOf="@id/editStatus"
            />

        <EditText
            android:id="@+id/editStatus"
            android:text="@={task.status}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/status_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editDescription"
            app:layout_constraintBottom_toTopOf="@id/editCreatedDate"
            />
        <EditText
            android:id="@+id/editCreatedDate"
            android:text="@={task.createdDate}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/created_date_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editStatus"
            app:layout_constraintBottom_toTopOf="@+id/editDueDate"
            />

        <EditText
            android:id="@+id/editDueDate"
            android:text="@={task.dueDate}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/due_date_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editCreatedDate"
            />

        <Button
            android:id="@+id/create"
            android:onClick="@{clickHandler::onCreateBtnClicked}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            android:text="@string/create_task_button"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editDueDate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backButton"
            android:onClick="@{clickHandler::onBackBtnClicked}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/light_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@android:drawable/ic_menu_revert"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
