<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.dts.casemanagerfrontendandroid.model.Task"
            />
        <variable
            name="clickHandler"
            type="com.dts.casemanagerfrontendandroid.ui.updatetaskactivity.UpdateTaskClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addstockitem.AddNewStockItemActivity">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/dark_blue"
            android:text="@string/update_task_header"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/taskDetail"
            android:elevation="20sp"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/title"
                    android:text="@={task.title}"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/title_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/description"
                    />

                <TextView
                    android:id="@+id/description"
                    android:text="@={task.description}"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginTop="20sp"
                    android:hint="@string/description_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintBottom_toTopOf="@id/createdDate"
                    />

                <TextView
                    android:id="@+id/createdDate"
                    android:text="@={task.createdDate}"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginTop="20sp"
                    android:hint="@string/created_date_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintBottom_toTopOf="@+id/dueDate"
                    />

                <TextView
                    android:id="@+id/dueDate"
                    android:text="@={task.dueDate}"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"

                    android:hint="@string/due_date_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/createdDate"
                    app:layout_constraintBottom_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/StatusLabel"
            android:text="@string/status_label"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/status_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskDetail"
            app:layout_constraintBottom_toTopOf="@id/editStatus"
            />

        <EditText
            android:id="@+id/editStatus"
            android:text="@={task.status}"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            android:hint="@string/status_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/StatusLabel"

            />

        <Button
            android:id="@+id/submit"
            android:onClick="@{clickHandler::onSubmitBtnClick}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            android:text="@string/update_task_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editStatus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2
"
            />

        <Button
            android:id="@+id/delete"
            android:onClick="@{clickHandler::onDeleteBtnClick}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:text="@string/delete_task_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backButton"
            android:onClick="@{clickHandler::onBackBtnClick}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@android:drawable/ic_menu_revert"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
