<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="task"
            type="com.dts.casemanagerfrontendandroid.model.Task" />
    </data>
    <androidx.cardview.widget.CardView
        android:elevation="20sp"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@{task.title}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/title_hint"
                app:layout_constraintStart_toStartOf="@id/createdDateLabel"
                app:layout_constraintEnd_toEndOf="@id/createdDateLabel"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/status"
                android:text="@{String.valueOf(task.status)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/status_hint"
                app:layout_constraintStart_toStartOf="@+id/dueDateLabel"
                app:layout_constraintEnd_toEndOf="@id/dueDateLabel"
                app:layout_constraintTop_toTopOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/title"
                />

            <TextView
                android:id="@+id/description"
                android:text="@{task.description}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/description_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                />

            <TextView
                android:id="@+id/createdDateLabel"
                android:text="@string/created_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/created_date_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dueDateLabel"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintBottom_toTopOf="@id/createdDate"
                />

            <TextView
                android:id="@+id/dueDateLabel"
                android:text="@string/due_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/due_date_hint"
                app:layout_constraintStart_toEndOf="@+id/createdDateLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintBottom_toTopOf="@id/dueDate"
                />

            <TextView
                android:id="@+id/createdDate"
                android:text="@{task.createdDate.substring(0, 10)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/created_date_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dueDate"
                app:layout_constraintTop_toBottomOf="@+id/createdDateLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/dueDate"
                android:text="@{task.dueDate.substring(0, 10)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/due_date_hint"
                app:layout_constraintStart_toEndOf="@+id/createdDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dueDateLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>